# pronyx

./: AUTHORS  Cargo.toml  README.md
.github/workflows/: publish.yml
loader-shim/: Cargo.toml
loader-shim/src/: main.rs
pronyx/: Cargo.toml
pronyx/src/: cli.rs  errors.rs  main.rs  sc_shim.rs  utils.rs
pronyx/src/filesystem/: ext.rs
pronyx/src/kernel/: enter.rs  exit.rs  groups.rs  syscall.rs
pronyx/src/kernel/execve/: enter.rs  load_info.rs  loader-shim
pronyx/src/kernel/execve/binfmt/: elf.rs
pronyx/src/kernel/standard/: chdir.rs  chmod_access_mknod_at.rs  dir_link_attr.rs  link_at.rs  link_rename.rs  open.rs  open_at.rs  standard_syscall.rs  stat_at.rs  sym_link.rs  sym_link_at.rs  unlink_mkdir_at.rs
pronyx/src/process/: event.rs  proot.rs  sigactions.rs  tracee.rs  translation.rs
pronyx/src/register/: mod.rs  reader.rs  regs.rs  writer.rs
